# my_dost

./: pyproject.toml
my_autopylot/: CrashHandler.py  Engine.py  __init__.py  chrome39.py  citrix39.py  clipboard39.py  converters39.py  database39.py  excel39.py  folder39.py  helpers.py  images39.py  keyboard39.py  mail39.py  message39.py  mouse39.py  pdf39.py  scheduler39.py  screen_scraping39.py  string39.py  utility39.py  voice39.py  windows39.py
my_dost/: CrashHandler.py  Engine.py  __init__.py  chrome39.py  clipboard39.py  converters39.py  excel39.py  folder39.py  helpers.py  keyboard39.py  mail39.py  message39.py  mouse39.py  pdf39.py  string39.py  utility39.py  voice39.py  windows39.py
tests/: test_auto_pylot.py
